tests/files/type_checker_tests/should_fail/007.cmdr
//Should fail trying to do a ternary expression with non boolean condition
x = if "HI" then "PASS" else "FAIL";